--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -2,132 +2,139 @@
 
 * {
   font-family: "MesloLGS NF";
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 900;
   min-height: 0;
-  font-weight: bold;
+  padding-right: 2px;
+  padding-left: 2px;
+  padding-bottom: 0px;
 }
 
-window#waybar {
+#waybar {
   background: transparent;
+  color: @text;
+  margin: 2px 2px;
+}
+
+#workspaces {
+  border-radius: 5px;
+  margin: 5px;
   background-color: @crust;
-  color: @overlay0;
-  transition-property: background-color;
-  transition-duration: 0.1s;
-  border-bottom: 1px solid @overlay1;
-}
-
-#window {
-  margin: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-button {
-  box-shadow: inset 0 -3px transparent;
-  border: none;
-  border-radius: 0;
-}
-
-button:hover {
-  background: inherit;
-  color: @mauve;
-  border-top: 2px solid @mauve;
+  margin-left: 0.5rem;
 }
 
 #workspaces button {
-  padding: 0 4px;
-}
-
-#workspaces button.focused {
-  background-color: rgba(0, 0, 0, 0.3);
-  color: @rosewater;
-  border-top: 2px solid @rosewater;
+  color: @overlay1;
+  border-radius: 5px;
+  padding: 0.4rem;
 }
 
 #workspaces button.active {
-  background-color: rgba(0, 0, 0, 0.3);
   color: @mauve;
-  border-top: 2px solid @mauve;
+  border-radius: 5px;
 }
 
-#workspaces button.urgent {
-  background-color: #eb4d4b;
+#workspaces button:hover {
+  color: @blue;
+  border-radius: 5px;
 }
 
-#pulseaudio,
+#custom-music,
+#tray,
+#backlight,
 #clock,
 #battery,
+#pulseaudio,
+#network,
 #cpu,
 #memory,
-#disk,
-#temperature,
-#backlight,
-#wireplumber,
-#tray,
-#network,
-#mode,
-#scratchpad,
+#custom-lock,
 #custom-power,
 #custom-arch {
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 6px;
-  margin-right: 6px;
-  padding-left: 6px;
-  padding-right: 6px;
+  background-color: @crust;
+  padding: 0.25rem 0.5rem;
+  margin: 5px 0;
 }
 
-#clock {
-  color: @flamingo;
-  border-bottom: 2px solid @flamingo;
+#memory {
+  color: @peach;
 }
 
-#clock.date {
+#cpu {
   color: @teal;
-  border-bottom: 2px solid @teal;
-}
-
-#pulseaudio {
-  color: @blue;
-  border-bottom: 2px solid @blue;
+  border-radius: 5px 0px 0px 5px;
 }
 
 #network {
-  color: @peach;
-  border-bottom: 2px solid @peach;
+  color: @blue;
+  border-radius: 0px 5px 5px 0px;
 }
 
-#idle_inhibitor {
-  margin-right: 12px;
-  color: #7cb342;
-}
-
-#idle_inhibitor.activated {
-  color: @red;
+#clock {
+  color: @mauve;
+  border-radius: 5px;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 #battery {
   color: @green;
-  border-bottom: 2px solid @green;
+  border-radius: 0px 5px 5px 0px;
+  margin-right: 0.5rem;
+}
+
+#battery.charging {
+  color: @green;
+}
+
+#battery.warning:not(.charging) {
+  color: @red;
+}
+
+#backlight {
+  color: @yellow;
+}
+
+#backlight {
+  border-radius: 0;
+}
+
+#pulseaudio {
+  color: @maroon;
+  border-radius: 5px 0px 0px 5px;
+  margin-left: 0.5rem;
+}
+
+#custom-music {
+  color: @mauve;
+  border-radius: 5px;
+}
+
+#custom-lock {
+  border-radius: 5px 0px 0px 5px;
+  color: @overlay1;
 }
 
 #custom-power {
+  border-radius: 0px 5px 5px 0px;
   color: @red;
-  border-bottom: 2px solid @red;
+  margin-right: 0.5rem;
+}
+
+#custom-power button {
+  color: @overlay1;
+  border-radius: 5px;
+  padding: 0.4rem;
 }
 
 #custom-arch {
+  margin-left: 0.5rem;
   color: @sapphire;
-  font-size: 1.75rem;
-  border-bottom: 2px solid @sapphire;
+  font-size: 1.5rem;
+  border-radius: 5px;
 }
 
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-  margin-right: 0;
+#tray {
+  margin-right: 0.5rem;
+  border-radius: 5px;
 }
