--- a/dot_config/wlogout/style.css
+++ b/dot_config/wlogout/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "MesloLGS NF";
+  font-family: "JetBrainsMono Nerd Font";
   font-size: 18px;
   min-height: 0;
   font-weight: bold;
